# zero2prod

./: .gitignore  Cargo.toml  InitializeDatabase.md  LICENCE.md  configuration.json  deny.toml
.cargo/: config.toml
.github/workflows/: audit.yml  cicd.yml  static.yml
migrations/: 20230516082348_create_subscriptions_table.up.sql
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscribe.rs
tests/: healt_check.rs
