[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix = "0.13.0"
actix-web = { version="4.3.1", features=["macros"] }
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13.3"
serde = { version = "1.0.160", features = ["serde_derive", "derive"] }
sqlx = { version = "0.6.3", default-features = false, features=["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
uuid = { version = "1.3.3", features = ["v4"] }
